--- a/enlace.css
+++ b/enlace.css
@@ -3,5 +3,23 @@ body{
     font.family
 }
 p{
+    background-color: #B6C2C9;
+}
+h1{
+    font-size: 40px;
+    text-align: center;
+    color: #333333;
+    text-transform: uppercase;
+}
+h2{
     background-color: #7B929D;
+    color:#415058;
+    font-size: 32px;
+    text-decoration: underline;
+}
+h3{
+    background-color: #98AAB3;
+    color:#576B77;
+    font-size: 24px;
+    font-style: italic;
 }
